# solver2d_python

./: CMakeLists.txt  pyproject.toml  test.py
bindings/: bindings.cpp
include/solver2d/: solver2d.h
solver2d_py/Debug/: solver2d_py.cp310-win_amd64.pyd
src/: body.c
